# my_moneyforward

./: README.md  config.yaml.sample  main.py  pyproject.toml
moneyforward/: moneyforward.py
